--- a/Dumsy2/MainPage.xaml
+++ b/Dumsy2/MainPage.xaml
@@ -23,23 +23,21 @@
             <controls:PanoramaItem Name="MainPageItem">
                     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height ="100*"/>
+                        <RowDefinition Height ="450*"/>
                         <RowDefinition Height ="40"/>
-                        <RowDefinition Height ="120"/>
+                        <RowDefinition Height ="250"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="100*"/>
                         <ColumnDefinition Width="100*"/>
                     </Grid.ColumnDefinitions>
-                        <StackPanel Grid.ColumnSpan="2">
-                            <TextBlock x:Name="MovieName" FontSize="{StaticResource PhoneFontSizeExtraLarge}" TextWrapping="Wrap" Grid.Row="0" HorizontalAlignment="Center" Text=""/>
-                            <HyperlinkButton x:Name="MoreInfo" FontSize="{StaticResource PhoneFontSizeMedium}" Grid.Row="0" HorizontalAlignment="Right" Margin="0,0,20,0" Content="More Info.." Visibility="Collapsed" Click="MoreInfo_Click"/>
-                        <TextBlock x:Name="Genre" FontSize="{StaticResource PhoneFontSizeMedium}" TextWrapping="Wrap" Grid.Row="0" HorizontalAlignment="Center" Text=""/>
-                        <TextBlock x:Name="Year" FontSize="{StaticResource PhoneFontSizeMedium}" TextWrapping="Wrap" Grid.Row="0" HorizontalAlignment="Center" Text=""/>
-                        <TextBlock x:Name="Cast" FontSize="{StaticResource PhoneFontSizeMedium}" TextWrapping="Wrap" Grid.Row="0" HorizontalAlignment="Center" Text=""/>
-
-                    </StackPanel>
-                    <TextBlock x:Name="Timer" Grid.Row ="2" Width="200" Height ="100" Grid.ColumnSpan="2" Style="{StaticResource PhoneTextTitle1Style}" Margin="20,0,0,0"/>
+                        <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Orientation="Vertical" VerticalAlignment="Stretch" Height="450">
+                            <TextBlock x:Name="MovieName" FontSize="100" TextWrapping="Wrap" Text="" Margin="0,0,0,0" HorizontalAlignment="Center"/>
+                            <HyperlinkButton x:Name="MoreInfo" FontSize="{StaticResource PhoneFontSizeMedium}" HorizontalAlignment="Right" Margin="0,0,20,0" Content="More Info.." Click="MoreInfo_Click" Visibility="Collapsed"/>
+                            <TextBlock x:Name="Genre" FontSize="{StaticResource PhoneFontSizeMedium}" TextWrapping="Wrap" HorizontalAlignment="Left" Text=""/>
+                            <TextBlock x:Name="Cast" FontSize="{StaticResource PhoneFontSizeMedium}" TextWrapping="Wrap" HorizontalAlignment="Left" Text=""/>
+                        </StackPanel>
+                    <TextBlock x:Name="Timer" Grid.Row ="2" Width="270" Height ="300" Grid.ColumnSpan="2" FontFamily="Segoe UI" FontSize="150" Margin="0,0,0,50" HorizontalAlignment="Center"/>
                 </Grid>
                 </controls:PanoramaItem>
 
